--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "node-datetime": "^2.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-responsive-carousel": "^3.2.23",
+    "react-loader-spinner": "^5.3.4",
     "react-scripts": "^2.1.3",
     "web-vitals": "^2.1.4"
   },
