--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
+altgraph @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot7/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-133.100.1.1/altgraph-0.17.2-py2.py3-none-any.whl
 aniso8601==9.0.1
+attrs==23.1.0
 blinker==1.6.2
 certifi==2023.5.7
 charset-normalizer==3.1.0
@@ -6,13 +8,20 @@ click==8.1.3
 Flask==2.3.2
 Flask-Cors==3.0.10
 Flask-RESTful==0.3.10
+flask-swagger-ui==4.11.1
+future @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot7/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-133.100.1.1/future-0.18.2-py3-none-any.whl
 idna==3.4
+importlib-metadata==6.6.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
+jsonschema==4.17.3
+macholib @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot7/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-133.100.1.1/macholib-1.15.2-py2.py3-none-any.whl
 MarkupSafe==2.1.3
 numpy==1.24.3
+pyrsistent==0.19.3
 pytz==2023.3
 requests==2.31.0
-six==1.16.0
-urllib3==2.0.3
+six @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot7/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-133.100.1.1/six-1.15.0-py2.py3-none-any.whl
+urllib3==1.26.16
 Werkzeug==2.3.6
+zipp==3.15.0
